--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
   "type": "static",
-  "alias": "lakecountrybaptistchurch"
+  "name": "lakecountrybaptistchurch",
+  "alias": "lakecountrybaptistchurch.now.sh"
 }
