--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 cache:
   directories:
     - "node_modules"
+script: echo ""
+before_deploy: npm install now --no-save
 deploy:
   - provider: script
     script: now --token $NOW_TOKEN && now alias --token $NOW_TOKEN
